force-app/main/default/objects/SecureDetail__c/SecureDetail__c.object-meta.xml
<CustomObject>
    <label>Secure Detail</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Secure Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secure Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>