force-app/main/default/objects/SecureDetail__c/fields/details__c.field-meta.xml
<CustomField>
    <fullName>details__c</fullName>
    <description>Details of the sensitive information</description>
    <inlineHelpText>Details of the sensitive information</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>