force-app/main/default/objects/SecureDetail__c/fields/tripVisitReport__c.field-meta.xml
<CustomField>
    <fullName>tripVisitReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip/Visit Report</label>
    <referenceTo>Trip_Visit_Report__c</referenceTo>
    <relationshipLabel>Secure Details</relationshipLabel>
    <relationshipName>Secure_Details</relationshipName>
    <type>Lookup</type>
</CustomField>